# lawercase

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  ADVANCED_FEATURES_COMPLETE.md  ANALYSIS_REPORT_2025-10-20.md  ARCHITECTURE_DIAGRAM.md  BOT_COMPREHENSIVE_ANALYSIS.md  BOT_FIXES_2025-10-31.md  BOT_QUICKSTART.md  BOT_STATUS.md  BOT_TESTING_RESULTS_2025-10-31.md  BOT_WORKING_SOLUTION.md  CACHING_LAYER_README.md  CASE_6139bc5d_REPORT.md  CASE_DATA_VERIFICATION_REPORT.md  CASE_LIST_FEATURE.md  CLAUDE_FLOW_READINESS_REPORT.md  COMPLETE_BOT_FIX_STATUS_2025-11-01.md  COMPLETE_CODE_AUDIT_2025-10-31.md  COT_INTEGRATION_COMPLETE.md  CRITICAL_MEMORY_BUG_REPORT.md  DATABASE_FOUNDATION_README.md  DEPLOYMENT_2025-11-26.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS_2025-11-14.md  DOCUMENT_MONITOR_IMPLEMENTATION.md  DOCUMENT_MONITOR_INTEGRATION_GUIDE.md  DOCUMENT_MONITOR_README.md  Dockerfile  EB1_COMPLETE_SYSTEM_SUMMARY.md  EB1_WORKFLOW_GUIDE.md  ENHANCED_ORCHESTRATION_README.md  EVIDENCE_RESEARCHER_INTEGRATION_GUIDE.md  EXECUTION_SUMMARY.md  FINAL_INTEGRATION_GUIDE.md  (+195 more)
.claude/: settings.local.json
alembic/: env.py  script.py.mako
api/: __init__.py  auth.py  deps.py  main.py  main_production.py  middleware.py  middleware_production.py  schemas.py  startup.py
benchmarks/: __init__.py  benchmark_suite.py  run_benchmarks.py
config/: logging.py  secrets_manager.py  settings.py
core/: __init__.py  config.py  exceptions.py  logging_config.py  logging_utils.py  resilience.py  retry.py  websocket_manager.py
data_ingestion/: __init__.py  async_jobs.py  backup_manager.py  channel_watcher.py  colab_pipeline.py  content_filter.py  github_collector.py  ingest_utils.py  log_parser.py  scheduler.py  tasks.py  telegram_parser.py  watcher.py  web_parser.py  youtube_parser.py
docs/: EB1A_VALIDATION_GUIDE.md  EB1A_VALIDATION_IMPLEMENTATION_SUMMARY.md  intake_workflow.md
examples/: caching_usage_example.py  eb1a_evidence_analysis_example.py  eb1a_workflow_example.py  enhanced_orchestration_example.py  knowledge_graph_example.py  legal_features_example.py  memory_usage_example.py  observability_example.py  self_correcting_agents_example.py  validator_usage_example.py
k8s/: deployment.yaml  ingress.yaml  service.yaml
knowledge_base/: __init__.py  context_enricher.py  embedding_utils.py  kb_admin.py  knowledge_store.py  knowledge_updater.py  policy_extractor.py  precedent_analyzer.py  rag_indexer.py  semantic_search.py  summary_generator.py
migrations/: 003_case_intake_progress.sql  create_mega_agent_schema.py  migrate_embedding_dimension_to_3072.sql  migrate_to_2000_hnsw.sql  migrate_to_3072_hnsw.sql
mlops/: training_pipelines.py
openapi/: mega_agent_pro.openapi.yaml
tests/: conftest.py
(+437 files in other folders)
