[project]
name = "mega-agent-pro"
version = "0.1.0"
requires-python = ">=3.11"
description = "Mega Agent Pro"
authors = [{ name = "Mega Agent Team" }]

[project.dependencies]
anyio = "^4.4"
httpx = "^0.27.0"
typer = "^0.12.3"
structlog = "^24.4.0"
tenacity = "^9.0.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
pikepdf = "^9.0.0"
PyPDF2 = "^3.0.1"
img2pdf = "^0.5.1"
python-dotenv = "^1.0.1"
orjson = "^3.9.15"
python-telegram-bot = "^21.4"
pytest = "^8.3.0"
pytest-asyncio = "^0.23.7"
freezegun = "^1.5.1"
respx = "^0.20.2"
hypothesis = "^6.102.0"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]
