[project]
name = "mega-agent-pro"
version = "0.1.0"
requires-python = ">=3.11"
description = "Mega Agent Pro"
authors = [{ name = "Mega Agent Team" }]

[project.dependencies]
anyio = "^4.4"
httpx = "^0.27.0"
typer = "^0.12.3"
structlog = "^24.4.0"
tenacity = "^9.0.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
pikepdf = "^9.0.0"
PyPDF2 = "^3.0.1"
img2pdf = "^0.5.1"
python-dotenv = "^1.0.1"
orjson = "^3.9.15"
python-telegram-bot = "^21.4"
pytest = "^8.3.0"
pytest-asyncio = "^0.23.7"
freezegun = "^1.5.1"
respx = "^0.20.2"
hypothesis = "^6.102.0"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Allow specific builtin shadowing in observability modules
# Ignore specific security warnings that are intentional
ignore = [
    "A003",  # Shadowing builtins (type, format) - intentional in dataclasses
    "S603",  # subprocess without shell=True - controlled input in scripts
    "S112",  # try-except-continue - intentional error handling pattern
    "E402",  # Module level import not at top - intentional for conditional imports
]

[tool.ruff.lint.per-file-ignores]
"core/observability/grafana_dashboards.py" = ["A003"]  # type attribute
"core/observability/log_aggregation.py" = ["A003"]  # format method
"deployment/docker/smoke_test.py" = ["S603", "S607"]  # subprocess with controlled input
"deployment\\docker\\smoke_test.py" = ["S603", "S607"]  # subprocess with controlled input (Windows)
"core/groupagents/mega_agent.py" = ["S112"]  # try-except-continue pattern
"benchmarks/run_benchmarks.py" = ["E402"]  # Module level imports after code
"core/caching/multi_level_cache.py" = ["E402"]  # Import after version check
"core/llm_interface/intelligent_router.py" = ["E402"]  # Import after version check
"core/memory/memory_hierarchy.py" = ["E402"]  # Import after version check
